Merge pull request #11 from DasBabyPixel/1.21.5
- Port project to Minecraft 1.21.8
- Update Gradle to 9.0.0 and Loom to 1.11-SNAPSHOT
- Fix dependency issues for 1.21.8
- Improve dynamic registry loading and packet dumps on custom servers
- Rewrite major code sections to Kotlin
- Update CI workflows and release actions
- Address race condition and potential NPE with garbage collector
- Fix crashes (spinnyboi) and toasts
- Resolve endecs issues affecting development runs

---------

Co-authored-by: Uni0305 <71868623+Uni0305@users.noreply.github.com>
Co-authored-by: Lorenz Wrobel <43410952+DasBabyPixel@users.noreply.github.com>